public/stylesheets/style.css
html, body {
  height: 100%;
  width: 100%;
  background-color: #01193F;
}

#section_1, #section_2, #section_3, #section_4 {
  min-height: 100%;
  width: 100%;
  overflow: auto;
}

#section_1 {
  background-color: #01193F;
}

#section_2 {
  background-color: #088FFF;
}

#section_3 {
  background-color: #DC9F09;
}

#section_4 {
  background-color: black;
  z-index: 4;
}

.wrap {
  margin: 0 auto;
  max-width: 1080px;
  padding: 8% 8%;
}

#section_1 .wrap {
  padding: 4% 8%;
}

@media (max-width: 1024px) {
  #section_1 .wrap {
    padding: 6% 8%;
  }
}

.left {
  float: left;
  width: 64%;
}

.right {
  float: right;
  max-width: 30%;
  overflow: hidden;
}

@media (max-width: 600px) {
  .left {
    width: 100%;
  }

  .right, #iphone_wrap {
    display: none;
  }
}

.text_block {
  width: 100%;
  padding-bottom: 40px;
}

.down {
  width: 80px;
  height: 80px;
  border-radius: 50%;
  border: 4px solid white;
  text-align: center;
  float: left;
  margin-right: 40px;
}

.down:hover, .up:hover {
  cursor: pointer;
}

.arrow_down {
  margin-top: 30px; 
  display: inline-block;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 26.0px 15px 0 15px;
  border-color: white transparent transparent transparent;
}

@media (max-width: 800px) {
  .down {
    width: 60px;
    height: 60px;
    margin-right: 28px;
  }

  .arrow_down {
    margin-top: 24px;
    border-width: 17.3px 10px 0 10px; 
  }

  .wrap {
    padding: 12% 8%;
  }
}

@media (max-width: 360px) {
  .down {
    display: none;
  }
}

.arrow_right {
  margin: 0 20px 4px 0;
  display: inline-block;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 7px 0 7px 12.1px;
  border-color: transparent transparent transparent white;
}

@media (max-width: 360px) {
  .arrow_right {
    display: none;
  }
}

.border {
  border: solid black 1px;
}

.hidden {
  display: none;
}

.fixed {
  position: fixed;
  right: 12%;
  -webkit-transform: translateZ(0);
  width: 24%;
}

@media (max-width: 1024px) {
  .fixed {
    right: 8%;
    width: 28%;
  }
}

@media (max-width: 840px) {
  .fixed {
    right: 6%;
  }
}

.relative {
  position: relative;
  width: 100%;
}

.centered {
  text-align: center;
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

#section_4 {
  position: relative;
}

